# KITS

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  findings.md  main.py  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml
src/KITS/: __init__.py
src/kits/: __init__.py  cli.py  deepseek.py  downloader.py  filters.py  llm.py  markdown_image.py  punctuator.py  separator.py  subtitle.py  summarizer.py  transcriber.py  translator.py  vad.py
src/kits/data/: prompts.json
tests/: test_cli.py  test_deepseek.py  test_downloader.py  test_filters.py  test_llm.py  test_markdown_image.py  test_punctuator.py  test_separator.py  test_subtitle.py  test_summarizer.py  test_transcriber.py  test_translator.py  test_vad.py
