[project]
name = "KITS"
version = "1.4.0"
description = "基于 kotoba-whisper-v2.2 的鹿乃 Twitch 直播总结工具，支持 50 系 Nvidia 显卡"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "KanbeReina", email = "kano.2525@qq.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "audio-separator[gpu]>=0.44.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.19.0",
    "onnxruntime-gpu>=1.26.0",
    "punctuators>=0.0.7",
    "pydantic>=2.13.4",
    "torch>=2.11.0",
    "transformers>=5.12.0",
]

[project.scripts]
kits = "kits.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

# punctuators 间接依赖 CPU 版 onnxruntime，会覆盖 audio-separator[gpu] 装的
# onnxruntime-gpu（同装一个 onnxruntime/ 目录、CPU 版 dll 顶掉 GPU 版），导致
# CUDAExecutionProvider 丢失、.onnx 人声分离退回 CPU。这里强制改写为 gpu 版。
[tool.uv]
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]

# 行宽 120：本项目注释/字符串多为中文（视觉宽度约 2 倍），120 比默认 88 更合身。
# 规则集 E（pycodestyle）+ F（pyflakes）+ I（isort 导入排序）：格式与正确性基础三件套。
# B/UP/SIM 等质量增强规则留待后续单独 PR 引入，避免与协作基建改动混在一起。
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
